--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha **/*.test.js",
     "start": "node server.js"
   },
   "author": "",
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "fs": "0.0.1-security",
     "hbs": "^4.0.1",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.9"
   }
 }
